@@ -323,3 +323,6 @@ July 3, 2001: LDAP fixes and updates to support new APIs
 * Philippe Troin <phil@fifi.org>
 July 12, 2001: Proper handling of GNU getopt, support for optionally
 disabling LDAP/Hesiod, fixes for the dev/nodev option on Linux
+
+November 28, 2001: Bug fix.  Support "nolock" as an NFS option, not a
+generic mount option.
