@@ -3,8 +3,10 @@
 *** Notes specific to am-utils version 6.1a5 (work in progress):
 
 - bugs fixed:
-	generic map parsing bug which was rejecting a numerical mount option
-	if it was the last option in the string
+
+	* generic map parsing bug which was rejecting a numerical mount
+	  option if it was the last option in the string
+ 	* "nolock" is an NFS mount option, not a generic one
 
 *** Notes specific to am-utils version 6.1a4:
 
